2013-03-11 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_config.php: fixed PHP notices when the "homeurl"
	is empty in some installations.

2013-03-11 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_graph.php: change the text of legends of "Data"
	for "Avg".
	
	Fixes: #3607218

2013-03-11  Sergio Martin <sergio.martin@artica.es>

	* include/functions_groups.php
	include/functions_graph.php: Added extral controls in status
	count retrieving functions to avoid negative numbers for
	bug 3607315

	* extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql: Updated
	the data of unknown modules to new fields in migration

2013-03-11 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/planned_downtime.list.php: fixed the lost data
	from planned downtime, show in the table of audits.
	
	Fixes: #3607608

2013-03-11 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_tags.php: fixed the function
	"tags_get_acl_tags_module_condition" when the user profile is in
	the all group.
	
	* include/functions_reporting.php, include/functions_alerts.php,
	operation/agentes/estado_monitores.php: improve the code style.

2013-03-11 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/module_manager_editor_common.php: show only the
	tags that the user has.
	
	Fixes: #3607617
	
	* include/functions_tags.php: cleaned source code style.

2013-03-11  Kikuchi Koichiro <koichiro@rworks.jp>

	* extensions/update_manager/lib/libupdate_manager_client.php,
	  extensions/update_manager/lib/xmlrpc/xmlrpc.inc: Added HTTP redirect
	 support. It fixes an issue that update manager behind http proxy
	 failed to communicate with update server due to the server's
	 "301 Moved Permanently" HTTP response.

	Merged from: branch_4.0

2013-03-08 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/planned_downtime.list.php: added event when some